--- a/packages/news-homepage-with-astro/src/components/MenuToggle.astro
+++ b/packages/news-homepage-with-astro/src/components/MenuToggle.astro
@@ -1,7 +1,5 @@
 ---
 import { Image } from "@astrojs/image/components";
-import menuCloseSrc from "../../public/icon-menu-close.svg";
-import menuOpenSrc from "../../public/icon-menu.svg";
 
 type Props = {
   variation: "open" | "close";
@@ -27,17 +25,18 @@ const { variation, style } = Astro.props;
 </style>
 <button style={style} data-toggle-menu>
   <Image
-    src={variation === "open" ? menuOpenSrc : menuCloseSrc}
+    src={variation === "open" ? "/icon-menu.svg" : "/icon-menu-close.svg"}
     alt="Menu toggle"
     aria-hidden
-    width={24}
-    height={24}
+    width={40}
+    height={17}
+    format="svg"
   />
 </button>
 <script>
-  const button = document.querySelector('[data-toggle-menu]');
+  const button = document.querySelector("[data-toggle-menu]");
 
-  button?.addEventListener('click', () => {
-    console.log('button was clicked')
+  button?.addEventListener("click", () => {
+    console.log("button was clicked");
   });
 </script>
