--- a/packages/news-homepage-with-astro/src/layouts/Base.astro
+++ b/packages/news-homepage-with-astro/src/layouts/Base.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import GlobalStyles from "../components/GlobalStyles.astro";
 import MenuToggle from "../components/MenuToggle.astro";
 import Menus from "../components/Menus.astro";
@@ -46,6 +47,7 @@ const { title, menus } = Astro.props;
         </nav>
       </header>
       <slot />
+      <Footer />
     </div>
   </body>
 </html>
