--- a/packages/news-homepage-with-astro/src/components/MainNew.astro
+++ b/packages/news-homepage-with-astro/src/components/MainNew.astro
@@ -1,10 +1,9 @@
 ---
 import { Image } from "@astrojs/image/components";
 
-// TODO: replace base url with environment variable
 const images = {
-  mobile: `https://s3.amazonaws.com/frontendmentor/news-homepage/image-web-3-mobile.jpg`,
-  desktop: `https://s3.amazonaws.com/frontendmentor/news-homepage/image-web-3-desktop.jpg`,
+  mobile: `${import.meta.env.IMAGES_BASE_PATH}/image-web-3-mobile.jpg`,
+  desktop: `${import.meta.env.IMAGES_BASE_PATH}/image-web-3-desktop.jpg`,
 };
 ---
 
