--- a/packages/news-homepage-with-astro/src/components/PostPreview.astro
+++ b/packages/news-homepage-with-astro/src/components/PostPreview.astro
@@ -40,9 +40,8 @@ const { image, title, subtitle, order } = Astro.props;
   }
 </style>
 <article class="wrapper">
-  <!-- TODO: replace base URL with environemnt variable  -->
   <Image
-    src={`https://s3.amazonaws.com/frontendmentor/news-homepage${image.src}`}
+    src={`${import.meta.env.IMAGES_BASE_PATH}${image.src}`}
     alt={image.alt || ""}
     width={100}
     height={125}
