--- a/packages/news-homepage-with-astro/src/layouts/Base.astro
+++ b/packages/news-homepage-with-astro/src/layouts/Base.astro
@@ -18,7 +18,7 @@ const { title, menus } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
