--- a/packages/news-homepage-with-astro/src/components/PostPreview.astro
+++ b/packages/news-homepage-with-astro/src/components/PostPreview.astro
@@ -25,7 +25,7 @@ const { image, title, subtitle, order } = Astro.props;
     align-content: flex-start;
   }
 
-  .wrapper > :global(img) {
+  .wrapper > img {
     grid-row: 1 / -1;
     width: 100%;
     max-width: 100%;
