fix: keep sidebar closed when a refresh on the page happens

--- a/packages/news-homepage-with-astro/src/components/MenuSidebar.astro
+++ b/packages/news-homepage-with-astro/src/components/MenuSidebar.astro
@@ -39,7 +39,7 @@ import MenuToggle from "./MenuToggle.astro";
     }
   }
 </style>
-<aside data-menu-sidebar>
+<aside data-menu-sidebar data-closed>
   <MenuToggle
     variation="close"
     style={{ marginTop: "30px", marginBottom: "122px" }}
