--- a/packages/news-homepage-with-astro/src/layouts/Base.astro
+++ b/packages/news-homepage-with-astro/src/layouts/Base.astro
@@ -18,7 +18,11 @@ const { title, menus } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href={`${import.meta.env.BASE_URL}favicon.png`}
+    />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
